<resources>
    <string name="app_name">BakingApp</string>

    <string name="recipe_list">recipe list</string>
    <string name="recipe_position">recipe_position</string>
    <string name="recipe">recipe</string>
    <string name="recipe_name">recipe name</string>


    <string name="recipe_ingredients">recipe ingredients</string>
    <string name="recipe_steps">recipe steps</string>
    <string name="step">step</string>
    <string name="step_number">step number</string>

    <string name="step_short_description">step short description</string>
    <string name="step_description">step description</string>
    <string name="step_next_button">next step</string>
    <string name="step_previous_button">prev step</string>
    <string name="step_navigation_sample">1/7</string>

    <string name="ingredient_sample">ingredient sample</string>
    <string name="ingredient">ingredient</string>

    <string name="quantity">quantity</string>
    <string name="quantity_sample">5</string>

    <string name="measure">measure</string>
    <string name="measure_sample">CUP</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
