<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView

            android:paddingStart="10dp"
            android:textAlignment="textStart"
            android:id="@+id/ingredient"
            android:layout_weight="60"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/ingredient_sample"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="textStart"
            android:id="@+id/quantity"
            android:layout_weight="20"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/quantity_sample"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="textStart"
            android:id="@+id/measure"
            android:layout_weight="20"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/measure_sample"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />

</LinearLayout>